tests/variable/redefine_false.rev
var false = "value" // error: missing variable name after 'var' keyword in declaration